<resources>
    <string name="app_name">DonatesUs</string>
    <string name="start">Second Activity</string>
    <string name="click">Click</string>
    <string name="mainactivity">MainActivity</string>
    <string name="enter_full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="contactno">Contact No</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_onboard">Welcome Onboard</string>
    <string name="join_with_us"><![CDATA[Join With Us & Help Others]]></string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="new_user_signup">New User?SignUp</string>
    <string name="submit">Submit</string>
    <string name="user_name">User Name</string>
    <string name="donation_made">Donation Made</string>
    <string name="_5">5</string>
    <string name="on_going_donations">On Going Donations</string>
    <string name="certificates">Certificates</string>
    <string name="membership">Membership</string>
    <string name="blue">Blue</string>
    <string name="_4">4</string>
    <string name="donates">Donates</string>
    <string name="hi_kaveesha">Hi Kaveesha!</string>
    <string name="select_the_item">Select the Item</string>
    <string name="enter_the_quantity">Enter the Quantity</string>
    <string name="add_location_to_pick">Add Location to Pick</string>
    <string name="date">March 27</string>
    <string name="home_icon">Home</string>
    <string name="feed_icon">Feed</string>
    <string name="notification_icon">Notification</string>
    <string name="profile_icon">Profile</string>
    <string name="place_the_donation">Place the Donation</string>
    <string name="phone_number">hint</string>
    <string name="required" />
    <string name="phone_nu">Phone Number</string>


    <string name="name">Name</string>
    <string name="username">UserName</string>
    <string name="demail">Email</string>
    <string name="phone">Phone</string>
    <string name="vehiclenumber">VehicleNumber</string>
    <string name="dpassword">Password</string>
    <string name="driverAdd">Add</string>
    <string name="newDriver">Add New Driver</string>

    <string name="driverUpdate">Update</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>