<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFFFF"
    tools:context=".Cusprofile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="350dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="#FFC107"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/picCard"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:foregroundGravity="center_horizontal"
                app:cardCornerRadius="100dp">

                <ImageView
                    android:id="@+id/proPic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/profile" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/proCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/user_name"
                android:textColor="#fff"
                android:textSize="23dp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="46dp"
            android:layout_centerHorizontal="true"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="00dp"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textDonates"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/donates"
                        android:textColor="#000"
                        android:textSize="17dp" />

                    <TextView
                        android:id="@+id/proCount1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_5"
                        android:textColor="@color/black"
                        android:textSize="27dp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textCertficate2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/certificates"
                        android:textColor="#000"
                        android:textSize="17dp" />

                    <TextView
                        android:id="@+id/procount2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_4"
                        android:textColor="@color/black"
                        android:textSize="27dp"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textMember"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/membership"
                        android:textColor="#000"
                        android:textSize="17dp" />

                    <TextView
                        android:id="@+id/Textblue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/blue"
                        android:textColor="#2196F3"
                        android:textSize="27dp"
                        android:textStyle="bold" />

                </LinearLayout>


            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </RelativeLayout>

    <EditText
        android:id="@+id/nameText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="-18dp"
        android:layout_marginRight="40dp"
        android:ems="10"
        android:hint="@string/enter_full_name"
        android:inputType="textPersonName"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp" />

    <EditText
        android:id="@+id/addressText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="40dp"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPostalAddress"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp" />

    <EditText
        android:id="@+id/emailText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="40dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp" />

    <EditText
        android:id="@+id/contactText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="40dp"
        android:ems="10"
        android:hint="@string/contactno"
        android:inputType="phone"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp" />

    <EditText
        android:id="@+id/newPassText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="40dp"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="10dp"
        android:width="180dp"
        android:backgroundTint="@color/yellow"
        android:rotationX="0"
        android:text="EDIT BIO"
        app:cornerRadius="15dp" />
</LinearLayout>

